[project]
name = "image-quantize"
version = "0.1.0"
description = "A CLI tool to quantization image colors using median value."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "numpy>=2.3.2",
  "pillow>=11.3.0",
  "pydantic>=2.11.7",
  "typer>=0.16.1",
]

[dependency-groups]
dev = ["ruff>=0.12.10"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

preview = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
venvPath = "."
venv = ".venv"
